@@ -27,19 +27,6 @@
       </properties>
     </component>
   
-    <component type="vorbis-encoder">
-      <source location="flumotion.component.encoders.vorbis.vorbis"/>
-      <eater name="default"/>
-      <feeder name="default"/>
-      <properties>
-        <property name="feed" type="string" multiple="yes"/>
-        <property name="source" type="string" multiple="no"/>
-        <property name="bitrate" type="int"/>
-	<property name="quality" type="float"/>
-	<property name="channels" type="int"/>
-      </properties>
-    </component>
-  
     <component type="speex-encoder">
       <source location="flumotion.component.encoders.speex.speex"/>
       <eater name="default"/>
